# OpenCL-benchmark

./: .gitignore  .gitmodules  BUILD_UBUNTU.md  BUILD_WINDOWS.md  CMakeLists.txt  README.md  code_convention.md
examples/: CMakeLists.txt  examples-main.cpp
examples/fixtures/: cuboid_opencl_fixture.cpp  cuboid_opencl_fixture.h  factorial_opencl_fixture.cpp  factorial_opencl_fixture.h
include/: cl_benchmark.hpp  cl_benchmark_main.hpp
include/detail/: command_line_processor.hpp  duration.hpp  fixture_autoregistrar.hpp  fixture_register_macros.hpp  fixture_registry.hpp  fixture_runner.hpp  run_settings.hpp
include/detail/devices/: device_interface.hpp  opencl_device.hpp  opencl_platform.hpp  platform_interface.hpp  platform_list.hpp
include/detail/events/: event_interface.hpp  event_list.hpp  opencl_event.hpp
include/detail/fixtures/: fixture.hpp  fixture_family.hpp  fixture_id.hpp
include/detail/indicators/: duration_indicator.hpp  indicator_interface.hpp
include/detail/reporters/: benchmark_results.hpp  json_benchmark_reporter.hpp
tests/: CMakeLists.txt  duration_tests.cpp
viewer/: app.ts  index.html  package-lock.json  package.json
